# Hot-Wallet-App

./: .gitignore  README.md  auth_service.py  database.py  docker-compose.yml  k8s-manifests.yaml  makefile  models.py  pyproject.toml  requirements.txt  user_service.py
config/base/: chadland.sql  definitions.json  logger_config.yml
config/conf/primary/: pg_hba.conf  postgresql.conf
config/conf/rabbitmq/: rabbitmq.conf
config/conf/standby/: pg_hba.conf  postgresql.conf
scripts/: command-standby.sh  command-user.sh  init-primary.sh  log-configurations.sh  ssl-configurations.sh
src/: bootstrap.py  config.py  main.py
src/adapters/database/: aes_crypto.py  orm.py  repository.py
src/adapters/message_broker/: connection_manager.py  publisher.py  subscriber.py
src/core/correlation/: context.py  logger_filter.py  middleware.py
src/core/events/: events.py
src/core/exceptions/: exception_handlers.py  exceptions.py  types.py
src/domain/: commands.py  model.py
src/entrypoints/: broker_app.py  user_app.py
src/service_layer/: handlers.py  messagebus.py  unit_of_work.py  views.py
tests/: conftest.py
tests/integration/: test_repository.py  test_uow.py
tests/unit/: test_handlers.py
